# BenchmarkAndPromptOptimization

./: .gitignore  README.md  inputs.py  main.py  ollama_llms.py  prepare_dataset.py  pyproject.toml
src/: app.py  interface.py  main.py  manual_tests.py  metrics.py  ollama_llms.py  prepare_dataset.py  prompts.py
